--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -17,7 +17,12 @@
 body{
     width: 100%;
     min-height: 100vh;
-    font-family: var(--font-family-2);
+    font-family: var(--font-family-1);
+}
+
+video, img{
+    width: 100%;
+    object-fit: cover;
 }
 
 .header {
@@ -31,6 +36,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 5;
 
     --opacity: 0;
     --translate-x: translateX(-100%);
@@ -156,8 +162,11 @@ body{
     border: none;
     border-radius: 4px;
     color: var(--white);
+    font-family: var(--font-family-1);
+    font-weight: 400;
     font-size: .9rem;
     text-wrap: wrap;
+    text-transform: uppercase;
 
     display: flex;
     justify-content: flex-start;
@@ -169,4 +178,93 @@ body{
 .bi-chevron-down {
     /* outline: #000 1px solid; */
     font-size: .9rem;
+}
+
+.main {
+    position: relative;
+    z-index: 1;
+    /* overflow: hidden; */
+}
+
+.intro{
+    position: relative;
+    width: 100%;
+    height: max-content;
+    color: var(--white);
+    z-index: -2;
+}
+
+.intro__info{
+    position: absolute;
+    inset: 0;
+    padding-inline: 1rem;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    z-index: 2;
+}
+
+.intro__logo {
+    /* outline: 1px solid red; */
+    width: 250px;
+}
+
+.intro__img {
+    display: block;
+    width: 100%;
+}
+
+.intro__paragraph{
+    font-size: 1.4rem;
+    text-align: center;
+}
+
+.intro .cta {
+    font-size: 1.1rem;
+    width: 100%;
+    height: 3rem;
+
+    display: flex;
+    justify-content: center;
+    padding: 1.6rem 1.5rem;
+    transition: all .3s ease;
+}
+
+.intro .cta:hover{
+    /* outline: 3px solid var(--red); */
+    transform: scale(1.02);
+}
+
+.intro__video{
+    /* display: block; */
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    z-index: -2;
+}
+
+.intro__capa{
+    position: absolute;
+    /* inset: 0; */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg, transparent 3%, transparent 84%);
+    z-index: -1;
+}
+
+.bi-play{
+    font-size: 1.4rem;
+}
+
+
+@media ( width >= 630px){
+
 }
