--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -9,6 +9,7 @@
     --gray2: #a3a3a3;
     --red: #da292a;
     --white: #fff;
+    --mostaza: #e5e1d8;
     --black: #000;
     --font-family-1: 'Clash Grotesk', sans-serif;
     --font-family-2: "Bebas Neue", sans-serif;
@@ -180,6 +181,8 @@ video, img{
     font-size: .9rem;
 }
 
+/* * MAIN */
+
 .main {
     position: relative;
     z-index: 1;
@@ -189,7 +192,7 @@ video, img{
 .intro{
     position: relative;
     width: 100%;
-    height: max-content;
+    /* height: max-content; */
     color: var(--white);
     z-index: -2;
 }
@@ -197,6 +200,8 @@ video, img{
 .intro__info{
     position: absolute;
     inset: 0;
+    width: 100%;
+    height: 100%;
     padding-inline: 1rem;
     
     display: flex;
@@ -263,6 +268,111 @@ video, img{
 .bi-play{
     font-size: 1.4rem;
 }
+
+.drop {
+    overflow: hidden;
+}
+
+.drop__figure{
+    /* outline: 1px solid red; */
+    width: 100%;
+}
+
+.drop__img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-position: top;
+    aspect-ratio: 16/9;
+}
+.drop__texts {
+    position: relative;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-items: center;
+}
+.drop__title {
+    font-family: var(--font-family-2);
+    font-weight: 400;
+    font-size: 2.5rem;
+    /* line-height: 1.3rem; */
+}
+.drop__paragraph {
+    text-align: center;
+    /* font-size: 1rem; */
+}
+
+.drop__cta {
+    width: 100%;
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+    padding-block: 1rem;
+}
+
+.drop__cta:hover{
+    transform: scale(1.02);
+}
+
+.cards{
+    background-image: url(../assets/background-img.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    padding: 4rem 1.4rem;
+    font-family: var(--font-family-2);
+}
+
+.cards__title {
+    font-weight: 400;
+    font-size: 2.3rem;
+    text-align: center;
+    margin-bottom: 1.6rem;
+}
+
+.card__container { 
+    display: grid;
+    grid-auto-columns: auto;
+    gap: 1rem;
+}
+
+.card {
+    background-color: var(--gray);
+    color: var(--white);
+    padding-bottom: 4rem;
+    border-bottom: .5rem solid var(--red);
+}
+.card__img {
+    width: 100%;
+    aspect-ratio: 16/9;
+    object-fit: cover;
+}
+
+.card__texts{
+    padding: 1.5rem 1rem;
+}
+
+.card__apex {
+    display: flex;
+    flex-direction: column;
+    color: var(--red);
+    font-size: 1.2rem;
+    font-weight: 100;
+}
+.card__apex-span {
+    color: var(--white);
+}
+.card__title {
+    font-family: var(--font-family-1);
+    font-weight: 500;
+    font-size: 1.3rem;
+    
+}
+.card__paragraph {
+    font-family: var(--font-family-1);
+}
+
 
 
 @media ( width >= 630px){
