Agregar maquetacion a seccion play con estilos

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -516,6 +516,54 @@ video, img{
 
 .play{
     background-image: url(../assets/background-3.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    padding: .7rem 1.5rem 2rem;
+    color: var(--white);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+}
+
+.icons {
+    width: 100%;
+    max-width: 425px;
+}
+
+.icons__img {
+    display: block;
+    width: 100%;
+}
+
+.play__title {
+    font-family: var(--font-family-2);
+    font-weight: 500;
+    font-size: 2rem;
+}
+
+.play__console {
+    text-align: center;
+    font-size: 1.4rem;
+    font-family: var(--font-family-1);
+    font-weight: 400;
+}
+
+.play__cta {
+    width: 100%;
+    font-size: 1.1rem;
+    font-weight: 300;
+    padding: 1rem 0;
+    display: flex;
+    justify-content: center;
+}
+
+.play__paragraph {
+    text-align: center;
+    line-height: 1.6rem;
+    font-weight: 400;
+    font-size: .9rem;
+    text-wrap: pretty;
 }
 
 
