--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -2,11 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;    
+    list-style: none;
+    text-decoration: none;
 }
 
 :root{
     --gray: #161616;
     --gray2: #a3a3a3;
+    --gray3: #252525;
     --red: #da292a;
     --white: #fff;
     --mostaza: #e5e1d8;
@@ -565,6 +568,92 @@ video, img{
     font-size: .9rem;
     text-wrap: pretty;
 }
+
+.about {
+    background-color: var(--gray3);
+    padding: 1.5rem;
+}
+
+.about__links {
+    display: flex;
+    flex-direction: column;
+}
+
+.about_link {
+    border-bottom: 1px solid var(--gray2);
+    padding-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.about__lists {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.about__list {
+}
+
+.about__link {
+    font-size: 1.1rem;
+    color: var(--gray2);
+}
+
+.about__social {
+    color: var(--white);
+    border-bottom: 1px solid var(--gray2);
+}
+
+.social__title {
+    padding-top: 2rem;
+    font-size: 1.1rem;
+    font-family: var(--font-family-2);
+}
+
+.social__icons {
+}
+
+.social__icons .bi {
+}
+
+.about__images {
+    padding: 1.5rem 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.images {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1.5rem;
+}
+
+.images__img:nth-child(1){
+    display: block;
+    width: 80px;
+    object-fit: cover;
+}
+
+.images__img:nth-child(2){
+    display: block;
+    width: 165px;
+    object-fit: contain;
+}
+.images__img:nth-child(3){
+    display: block;
+    width: 270px;
+    object-fit: contain;
+}
+
+.about__img{
+    width: 260px;
+    object-fit: contain;
+    background-color: red;
+}
+
 
 
 @media ( width >= 630px){
