--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -604,18 +604,22 @@ video, img{
 .about__social {
     color: var(--white);
     border-bottom: 1px solid var(--gray2);
+    padding-block: 2rem 1.5rem;
 }
 
 .social__title {
-    padding-top: 2rem;
     font-size: 1.1rem;
     font-family: var(--font-family-2);
+    margin-bottom: 1.3rem;
 }
 
 .social__icons {
+    display: flex;
+    gap: 1.5rem;
 }
 
 .social__icons .bi {
+    font-size: 1.4rem;
 }
 
 .about__images {
@@ -652,6 +656,69 @@ video, img{
     width: 260px;
     object-fit: contain;
     background-color: red;
+}
+
+.footer {
+    color: var(--gray3);
+    padding: .6rem 1rem 2rem;
+    display: grid;
+    grid-auto-columns: auto;
+    gap: 1.5rem;
+}
+
+.footer__img {
+    display: block;
+    width: 50px;
+    object-fit: cover;
+}
+
+.footer__links {
+    font-size: 1.1rem;
+}
+
+.footer__lists {
+    display: flex;
+    flex-wrap: wrap;
+    gap: .8rem 1.5rem;
+}
+
+.footer__list {
+}
+
+.footer__link {
+    color: var(--gray3);
+}
+
+.footer__select {
+    font-size: 1.1rem;
+    height: 4rem;
+    padding-inline: 1.2rem;
+}
+
+.footer__privacy {
+}
+
+.privacy__lists{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem 1.5rem;
+}
+
+.privacy__list {
+    font-weight: 400;
+}
+
+.privacy__link {
+    color: var(--gray3);
+}
+
+.footer__paragraph {
+    font-family: var(--font-family-1);
+}
+
+.footer__img-end {
+    display: block;
+    width: 150px;
 }
 
 
