--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -45,6 +45,7 @@ video, img{
     --opacity: 0;
     --translate-x: translateX(-100%);
     --pointer-events: none;
+    --clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
 }
 
 .header:has( .header__input:checked){
@@ -149,6 +150,22 @@ video, img{
     list-style: none;
     padding-block: 1rem;
     border-bottom: 1px solid var(--gray2);
+    color: var(--white);
+    padding-right: 1rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav__list:hover, .nav__list:hover .nav__link{
+    color: var(--red);
+}
+
+.nav__list .bi{
+    transition: transform .3s ease;
+}
+
+.nav__list:hover .bi{
+    transform: rotate(180deg);
 }
 
 .nav__link {
@@ -183,6 +200,46 @@ video, img{
     /* outline: #000 1px solid; */
     font-size: .9rem;
 }
+
+/* .header:has(:hover){
+    --translate-x: translateX(-100%);
+    --pointer-events: none;
+    --clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+} */
+
+.cta__links {
+    /* border: 2px solid red; */
+    display: none;
+    position: absolute;
+    inset: 0;
+    background-color: #000000e4;
+    min-height: 100vh;
+    clip-path: var(--clip-path);
+    margin-top: 3.3rem;
+    padding-block: 6rem 4rem;
+    overflow-y: auto;
+    pointer-events: var(--pointer-events);
+    transition: clip-path .5s ease-out;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+.cta__link {
+    border: 2px solid red;
+    background-color: transparent;
+    color: var(--white);
+    border: 2px solid var(--white);
+    border-radius: 3px;
+    width: 80%;
+    padding: 1rem 0;
+    display: flex;
+    justify-content: center;
+}
+
 
 /* * MAIN */
 
@@ -365,12 +422,14 @@ video, img{
 .card__apex-span {
     color: var(--white);
 }
+
 .card__title {
     font-family: var(--font-family-1);
     font-weight: 500;
     font-size: 1.3rem;
     
 }
+
 .card__paragraph {
     font-family: var(--font-family-1);
 }
@@ -389,6 +448,7 @@ video, img{
     text-align: center;
     margin-bottom: 1.3rem;
 }
+
 .beyond__paragraph {
     font-family: var(--font-family-1);
     font-size: 1.3rem;
@@ -397,8 +457,9 @@ video, img{
 }
 
 .card2__container {
-    display: grid;
-    grid-auto-columns: auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     gap: 3.5rem;
 }
 
@@ -458,14 +519,12 @@ video, img{
     font-size: 1.1rem;
     line-height: 1.8rem;
 }
+
 .form__form {
     position: relative;
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
-}
-
-.form__label {
 }
 
 .form__label span{
@@ -481,10 +540,6 @@ video, img{
     outline: 2px solid var(--black);
     border-radius: 1px;
     padding: .8rem 1.2rem;
-}
-
-.form__label:nth-child(2) .form__input:-we{
-    /* background-color: red; */
 }
 
 .form__label:nth-last-child(2){
@@ -654,7 +709,6 @@ video, img{
 .about__img{
     width: 260px;
     object-fit: contain;
-    background-color: red;
 }
 
 .footer {
@@ -727,6 +781,98 @@ video, img{
     }
 }
 
-@media ( width >= 630px){
+@media ( width >= 640px){
+    .cta{
+        max-width: max-content;
+        padding-inline: 1.5rem;
+    }
+}
 
+@media ( width >= 768px){
+    .intro{
+        height: 80vh;
+        overflow: hidden;
+    }
+
+    .intro__info{
+        padding-bottom: 4rem;
+    }
+
+    .drop__figure{
+        display: none;
+    }
+    
+    .drop__container{
+        background-image: url(../assets/apex-img-1.jpg);
+        background-repeat: no-repeat;
+        background-size: 100%;
+        /* height: 30rem; */
+        padding-inline: 5rem;
+
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .drop__container:nth-child(1){
+        background-image: url(../assets/apex-img-4.jpg);
+        justify-content: flex-start;
+    }
+
+    .drop__texts {
+        width: 50%;
+        max-width: 400px;
+        
+        padding: 4.8rem 0;
+        
+    }
+    
+    .cards__title {
+        font-weight: 400;
+        font-size: 2.3rem;
+        text-align: center;
+        margin-bottom: 1.6rem;
+    }
+    
+    .card__container { 
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+        margin-inline: 5rem;
+    }
+
+    .beyond{
+        background-image: linear-gradient(0deg, var(--black) 20%, transparent 60%), url(../assets/backround-2.jpg);
+    }
+    
+    .card2 {
+        flex-basis: 300px;
+    }
+
+    .about__lists{
+        flex-direction: row;
+    }
+
+    .form__form{
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .form__label{
+        width: 100%;
+        /* background-color: red; */
+    }
+
+    .form__label:nth-child(2), .form__label:nth-child(3){
+        flex-grow: 350px;
+        flex-basis: 350px;
+        width: 50%;
+    }
+}
+
+@media (width >= 1024px){
+    .about__images {
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
