--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -54,11 +54,11 @@ video, img{
     --pointer-events: unset;
 }
 
-.header:has( .nav .nav__input:checked){
+/* .header:has( .nav .nav__input:checked){
     --opacity: 0;
     --translate-x: translateX(-100%);
     --pointer-events: none;
-}
+} */
 
 .header__label {
     width: max-content;
@@ -513,11 +513,12 @@ video, img{
     margin-bottom: 1.8rem;
 }
 
-.form__parargaph {
+.form__paragraph {
     font-family: var(--font-family-1);
     font-weight: 300;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     line-height: 1.8rem;
+    margin-bottom: 1.5rem;
 }
 
 .form__form {
@@ -638,7 +639,7 @@ video, img{
     padding-bottom: 1rem;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 8rem;
 }
 
 .about__lists {
@@ -806,11 +807,12 @@ video, img{
         background-image: url(../assets/apex-img-1.jpg);
         background-repeat: no-repeat;
         background-size: 100%;
-        /* height: 30rem; */
+        height: 390px;
         padding-inline: 5rem;
 
         display: flex;
         justify-content: flex-end;
+        align-items: center;
     }
 
     .drop__container:nth-child(1){
@@ -848,6 +850,10 @@ video, img{
         flex-basis: 300px;
     }
 
+    .about__links-link{
+        gap: 1rem;
+    }
+
     .about__lists{
         flex-direction: row;
     }
@@ -864,15 +870,178 @@ video, img{
     }
 
     .form__label:nth-child(2), .form__label:nth-child(3){
-        flex-grow: 350px;
+        flex-grow: 1;
         flex-basis: 350px;
-        width: 50%;
+    }
+
+    .footer{
+        padding: 3rem;
     }
 }
 
 @media (width >= 1024px){
+
+    .header{
+        background-color: var(--black);
+        padding-left: 2rem;
+        height: 4rem;
+    }
+
+    .header__figure {
+        width: 3rem;
+    }
+
+    .header__label{
+        display: none;
+    }
+
+    .header .cta{
+        font-size: 1.1rem;
+        padding: .8rem;
+        width: 240px;
+    }
+
+    .nav {
+        background-color: transparent;
+        position: unset;
+        padding: 0;
+        height: unset;
+        opacity: unset;
+        transform: unset;
+        pointer-events: unset;
+
+        margin: auto;
+    }
+    
+    .nav__header {
+        display: none;
+    }
+    
+    .nav__lists {
+        overflow: unset;
+        background-color: unset;
+        max-width: unset;
+        height: unset;
+        padding: unset;
+        display: flex;
+        gap: 1.5rem;
+    }
+    
+    .nav__list {
+        /* border: 1px solid red; */
+        border: none;
+        padding: unset;
+        display: flex;
+        align-items: center;
+        gap: .3rem;
+    }
+
+    .nav__link{
+        font-size: 1rem;
+    }
+
+    .drop__title{
+        font-size: 3rem;
+    }
+
+    .drop__paragraph{
+        font-size: 1.2rem;
+    }
+
+    .drop__cta{
+        font-size: 1.1rem;
+    }
+
+    .beyond{
+        background-image: url(../assets/backround-2.jpg);
+        padding: 2rem 5rem;
+    }
+
+    .card__container{
+        margin-inline: 3rem;
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .card2 {
+        flex-grow: 1;
+        flex-basis: 200px;
+    }
+
+    .form{
+        padding: 5rem;
+        gap: 2rem;
+    }
+
+    .form__texts{
+        flex-grow: 1;
+        flex-basis: 250px;
+    }
+
+    .form__form{
+        flex-grow: 1;
+        flex-basis: 250px;
+
+        gap: 3rem;
+    }
+
+    .form__label:nth-child(2), .form__label:nth-child(3){
+        flex-grow: 1;
+        flex-basis: 100px;
+    }
+
+    .about{
+        padding: 2.5rem 5rem;
+    }
+
+    .about__links{
+        flex-direction: row;
+        gap: 2.5rem;
+    }
+
     .about__images {
         flex-direction: row;
         justify-content: space-between;
     }
+
+    .about__links{
+        border-bottom: 1px solid  var(--gray2);
+        padding-bottom: 2rem;
+    }
+
+    .about__links-link{
+        border: none;
+    }
+
+    .about__social{
+        /* border: 1px solid red; */
+        border: none;
+        padding: unset;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+    }
+
+    .footer{
+        display: grid;
+        grid-template-columns: 60px 1fr 250px;
+        grid-template-rows: repeat(2, auto);
+        gap: 1rem;
+        place-items: center;
+    }
+
+    .footer__img{
+        grid-column: 1/2;
+        grid-row: 1/3;
+    }
+
+    .footer__paragraph{
+        
+        grid-column: 2/3;
+    }
+
+    .footer__img-end{
+        grid-column: 3/4;
+        grid-row: 2/3;
+    }
+
 }
