Actualizar cambiar video de mobile a tablet con javascript

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -995,6 +995,7 @@ video, img{
 
     .about__links{
         flex-direction: row;
+        justify-content: space-between;
         gap: 2.5rem;
     }
 
